...
                                <color key="backgroundColor" red="0.23137254901960785" green="0.28235294117647058" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="QGo-Mq-Czb"/>
                                    <constraint firstAttribute="width" constant="190" id="SuN-4R-lNR"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jvy-ok-KJs"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="Logo" image="Bank_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="t3p-DC-D6M">
                                <rect key="frame" x="131.5" y="56" width="112" height="64"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h1c-7X-uPh">
                                <rect key="frame" x="17" y="225" width="342" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Uqd-jg-lyd"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                <textInputTraits key="textInputTraits" textContentType="username"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="jLz-uT-8yn"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ze0-2l-EOZ">
                                <rect key="frame" x="17" y="296" width="342" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="IHZ-WJ-Ig5"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5zH-FK-bqU">
                                        <rect key="frame" x="335" y="40" width="27" height="27"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="27" id="FI9-sS-ol8"/>
                                            <constraint firstAttribute="width" constant="27" id="ZEm-Ub-H4o"/>
                                        </constraints>
                                        <state key="normal" image="logout"/>
                                        <connections>
                                            <action selector="tappedLogout:" destination="tEa-K3-xtm" eventType="touchUpInside" id="dfg-MJ-QT2"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="José da Silva Teste" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQg-dD-5hG">
                                        <rect key="frame" x="18" y="40" width="287" height="29"/>
...
