
/* Class = "UILabel"; text = "R$1.000,00"; ObjectID = "0k4-au-4RN"; */
"0k4-au-4RN.text" = "R$1.000,00";

/* Class = "UILabel"; text = "Balance"; ObjectID = "5iv-oN-5aG"; */
"5iv-oN-5aG.text" = "Balance";

/* Class = "UILabel"; text = "2050 / 01.111222-4"; ObjectID = "nVU-N8-gxl"; */
"nVU-N8-gxl.text" = "2050 / 01.111222-4";

/* Class = "UILabel"; text = "Jose da Silva Teste"; ObjectID = "sDw-9E-P05"; */
"sDw-9E-P05.text" = "Jose da Silva Teste";

/* Class = "UILabel"; text = "Account"; ObjectID = "v8S-La-rLg"; */
"v8S-La-rLg.text" = "Account";

/* Class = "UILabel"; text = "Latest"; ObjectID = "TlM-j8-uep"; */
"TlM-j8-uep.text" = "Latest";
