...
                                    <constraint firstAttribute="height" constant="70" id="Jj6-Vs-2OD"/>
                                </constraints>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="pzf-0t-wV1">
                                <rect key="frame" x="17" y="294" width="341" height="130"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q7f-ba-sbM">
                                        <rect key="frame" x="0.0" y="0.0" width="341" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="CdE-bD-c6R"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="editingUserTextField:" destination="BYZ-38-t0r" eventType="editingChanged" id="IJz-Rb-VwH"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m7v-oC-M6j">
                                        <rect key="frame" x="0.0" y="80" width="341" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="dif-qO-SXc"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="76" y="644" width="223" height="62"/>
                                <color key="backgroundColor" red="0.23137254900000001" green="0.28627450980000002" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="62" id="DmG-TG-poE"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hxy-s1-eHN"/>
                                </connections>
                            </button>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="h0n-JA-aaC"/>
                    <connections>
                        <outlet property="errorMessageLabel" destination="UIj-bf-S3Q" id="K5a-e2-kNf"/>
                        <outlet property="loginButton" destination="jw4-XS-rvr" id="f7e-AB-WGI"/>
                        <outlet property="passwordTextField" destination="m7v-oC-M6j" id="VaI-1C-2w2"/>
                        <outlet property="userTextField" destination="Q7f-ba-sbM" id="CpF-eL-fCb"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="956" y="117.48768472906404"/>
        </scene>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oxk-a6-v8K">
                                                <rect key="frame" x="318" y="0.0" width="27" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="27" id="PpL-bp-hzO"/>
                                                    <constraint firstAttribute="height" constant="30" id="s5T-pv-77L"/>
                                                </constraints>
                                                <state key="normal" image="logout 2"/>
                                                <connections>
                                                    <action selector="exitTapped:" destination="Gya-GV-CjS" eventType="touchUpInside" id="5qU-VM-EZc"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
