
"9wI-EM-tE7.placeholder" = "User";

"BaA-lf-u8q.placeholder" = "Password";

"IKq-Mp-iwE.normalTitle" = "Login";
